@@ -136,6 +136,7 @@ Bug fixes:
 - Fix access restriction is not changed when creating a dataset.
 - Fix labeled disk is showed as wrong method in vdev.
 - Remove unused php binary.
+- Fix nfs share error with ZFS dataset.
 
 Permanent restrictions:
 - It is not possible to format a SoftRAID disk with MSDOS FAT16/32.
